--- a/Day1/styles.css
+++ b/Day1/styles.css
@@ -9,7 +9,7 @@ body {
     align-items: flex-end;
     height: 100vh;
     background-color: #053220;
-    background-image: url('/Day1/panic-attack.jpg');
+    background-image: url('panic-attack.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     padding: 1em;
