--- a/Day5/styles.css
+++ b/Day5/styles.css
@@ -3,17 +3,18 @@
 }
 
 body {
-    background: black;
-    color: #00b800;
+    background: pink;
+    color: mistyrose;
     margin: 0;
     padding: 0;
     font-family: "Press Start 2P", cursive;
+    font-size: 62.5%;
 }
 
 main {
     margin: 0 auto;
-    min-width: 300px;
-    max-width: 500px;
+    min-width: 10rem;
+    max-width: 15rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,16 +24,14 @@ h1 {
     background-color: #171616;
     padding: 1.2rem 1.8rem;
     margin: 1em;
+    font-size: 1.35rem;
+    text-align: center;
 }
 
-.person {
+.candy {
     background-color: #171616;
     padding: 0.6rem 1.8rem;
     margin: 1em;
-}
-
-h1 {
-    font-size: 1.35rem;
 }
 
 p {
@@ -40,7 +39,7 @@ p {
     white-space: nowrap;
     overflow: hidden;
     width: 30em;
-    animation: type 4s steps(60, end);
+    animation: type 2s steps(60, start);
 }
 
 @keyframes type {
