--- a/Day6/style.css
+++ b/Day6/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 1.5rem;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 body {
@@ -9,6 +9,12 @@ body {
     place-content: center;
     margin: 0;
     background-color: slategray;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
@@ -29,4 +35,19 @@ section {
 
 .taco {
     font-size: 1.35rem;
+}
+
+#refreshButton {
+    margin: 1rem auto;
+    background: #dfe1e5;
+    border: none;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    border-radius: 4px;
+    font-size: 16px;
+    box-shadow: 0.1rem 0.1rem 0 black;
+}
+
+#refreshButton:active {
+    transform: translateX(3px) translateY(3px);
+    box-shadow: none !important;
 }
