chore: styling finished

--- a/Day7/style.css
+++ b/Day7/style.css
@@ -2,14 +2,19 @@
     box-sizing: border-box;
 }
 
-/* body {
-    background: black;
-} */
+body {
+    position: absolute;
+    left: 34rem;
+    top: 15rem;
+}
 
 #form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    border: 5px dashed aqua;
+    width: 30rem;
 }
 
 button {
