--- a/Day15/style.css
+++ b/Day15/style.css
@@ -1,25 +1,62 @@
-* {
-    box-sizing: border-box;
+body {
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #F5F5F5;
 }
 
-h1,
-form,
-p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 100px 10px;
+form {
+    width: 35%;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    color: #212121;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #F5F5F5;
+    text-align: center;
+}
+
+input:focus{
+    outline: none;
 }
 
 .button {
     margin: 0 4px 4px;
-    background: #dfe1e5;
+    background: #4CAF50;
     border: none;
     padding: 8px 16px 8px 16px;
     border-radius: 4px;
     font-size: 14px;
     cursor: pointer;
+}
+
+.button:hover {
+    background-color: #45a049;
+}
+
+#result {
+    margin-top: 20px;
+    font-size: 18px;
+    color: #212121;
+}
+
+form,
+h1,
+#result {
+    text-align: center;
 }
